styles.css
/* ... */
.tags-container {
  list-style-type: none;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

.tags-container li {
  font-size: 0.85em;
  background-color: #ffffff;
  color: #770f8a;
  border: 1px solid #770f8a;
  border-radius: 3px;
  padding: 0 0.625em;
  margin-right: 0.625em;
  margin-top: 0.625em;
}

/* --------------------
        #Contact
---------------------*/

#contact {
  padding-bottom: 0; 
}

.form {
  max-width: 600px;
  margin: 0 auto;
}

.form-row {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.row-item {
  width: 48%;
}

.form input, .form textarea {
  margin: 0.3rem 0 0.6rem 0;
  font-size: 1em;
  padding: 0.3rem;
  border: none;
  border-radius: 2px;
  background-color: #e6e6e6;
  color: #000000;
}

.form textarea {
  min-height: 180px;
  margin-top: 0.3rem;
  resize: none;
}

.submit {
  font-size: 1em;
  background: #770f8a;
  border: 2px solid #770f8a;
  margin: 2em auto 0 auto;
  padding: 0.5em 1.5em;
}

.submit:hover {
  color: #770f8a;
}

.error-name, .error-email, .error-msg {
  font-size: 0.85em;
  color: #990000;
  margin-bottom: 0.6rem;
}

.social {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-pack: distribute;
  justify-content: space-around;
  max-width: 480px;
  margin: 100px auto 65px auto;
  list-style-type: none;
}

.social a {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  text-decoration: none;
  border: 2px solid #770f8a;
  border-radius: 50%;
  padding: 1.2rem;
  /* For Safari */
  text-align: center;
}

.social-icon:hover {
  -webkit-transform: scale(1.2);
  transform: scale(1.2);
}

/* --------------------
        Footer
---------------------*/

footer {
  min-height: 125px;
  background-color: #1a1a1a;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
      justify-content: center;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  padding: 25px 0;
  text-align: center;
}

footer div {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

footer p {
  font-size: 0.85em;
  color: #b3b3b3;
  padding: 10px 15px;
}

footer div p:first-of-type {
  border-right: 1px solid #b3b3b3;
}

/* --------------------
      Media queries
---------------------*/

@media screen and (min-width: 425px) {
  .banner-text p {
    width: 75%;
  }
}

@media screen and (min-width: 686px) {
  .banner-text p {
    width: 65%;
  }
}

@media screen and (min-width: 768px) {
  @-webkit-keyframes slide-in {
    0% {
      -webkit-transform: translateX(100vw);
              transform: translateX(100vw)
    }
    100% {
      -webkit-transform: translateX(0%);
              transform: translateX(0%)
    }
  }
  @keyframes slide-in {
    0% {
      -webkit-transform: translateX(100vw);
              transform: translateX(100vw)
    }
    100% {
      -webkit-transform: translateX(0%);
              transform: translateX(0%)
    }
  }
  .container {
    padding: 120px 40px;
  }
  .navlink-wrapper a {
    padding: 2rem 1.2rem;
  }
  .banner {
    background-image: url("./images/banner-large.jpg");
  }
  .banner-text p {
    width: 60%;
  }
  .about-wrapper {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    padding: 0 2.5rem;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
  }
  .column1, .column2 {
    width: calc(50% - 1.5em);
    padding: 0;
  }
  .skills-item {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: reverse;
        -ms-flex-direction: row-reverse;
            flex-direction: row-reverse;
    width: 50%;
    text-align: justify;
    margin-left: 16px;
    -webkit-transform: translateX(100vw);
            transform: translateX(100vw);
  }
  .skills-item .skills-item-content {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: end;
        -ms-flex-align: end;
            align-items: flex-end;
    padding: 0 1.5em 0 0;
  }
  .skills-item:nth-child(2n) .skills-item-content {
    -webkit-box-align: start;
        -ms-flex-align: start;
            align-items: flex-start;
    padding: 0 0 0 1.5em;
  }
  .skills-item:nth-child(2n) {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    margin-left: calc(50% - 16px);
  }
  .skills-icon {
    -ms-flex-item-align: center;
        align-self: center;
  }
  .animate {
    -webkit-animation: 2s both slide-in;
            animation: 2s both slide-in;
  }
}
/* ... */

